[gd_scene load_steps=33 format=3 uid="uid://vq3ebi483wyn"]

[ext_resource type="Script" uid="uid://ceou74g8np8m2" path="res://Player/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://dwurb7gsrfo2s" path="res://Assets/Player/Player_SmallDrill01.png" id="2_od3ui"]
[ext_resource type="Texture2D" uid="uid://befjlexrbepi2" path="res://Assets/Player/Player_SmallDrill02.png" id="3_00tjw"]
[ext_resource type="Script" uid="uid://cswelp48kvxed" path="res://Player/ShopHud.gd" id="3_btcbx"]
[ext_resource type="Texture2D" uid="uid://f8to3g72oacr" path="res://Assets/Player/Player_BigDrill01.png" id="4_x3vf3"]
[ext_resource type="Texture2D" uid="uid://bsnxfjulcjyyl" path="res://Assets/Player/Player_BigDrill02.png" id="5_apopc"]
[ext_resource type="Texture2D" uid="uid://ctt8p8t8m8fm8" path="res://Assets/Player/Player_Idle01.png" id="6_5htga"]
[ext_resource type="Texture2D" uid="uid://dagkdj771c8ie" path="res://Assets/Player/Player_Idle02.png" id="7_p5o4e"]
[ext_resource type="Texture2D" uid="uid://dhtt666kpbd5m" path="res://Assets/Square.png" id="9_00tjw"]
[ext_resource type="Texture2D" uid="uid://dqqi5lxhhvmly" path="res://Assets/ShopUI01.png" id="9_x3vf3"]
[ext_resource type="Texture2D" uid="uid://b365uue3ib0sw" path="res://Assets/ShopiconAutominer.png" id="10_sm0op"]
[ext_resource type="Texture2D" uid="uid://bfxem8wudknhg" path="res://Assets/ShopSelector.png" id="10_x3vf3"]
[ext_resource type="Texture2D" uid="uid://qqwuseclnc26" path="res://Assets/ShopiconCargo.png" id="11_76lrf"]
[ext_resource type="Script" uid="uid://bjvo0o85w6gcu" path="res://Player/player_ui.gd" id="11_apopc"]
[ext_resource type="Texture2D" uid="uid://bfhiltsspnm6s" path="res://Assets/ShopiconDrill.png" id="12_efx54"]
[ext_resource type="Texture2D" uid="uid://bkc4fom7rcbxa" path="res://Assets/ShopiconFlag.png" id="13_755ss"]
[ext_resource type="StyleBox" uid="uid://qsf04kvwe00c" path="res://Assets/Resources/FillBarBackground.tres" id="13_gu6f8"]
[ext_resource type="StyleBox" uid="uid://btqodgj00flxw" path="res://Assets/Resources/FillBar.tres" id="13_p5o4e"]
[ext_resource type="Texture2D" uid="uid://bjvgkphpeor8o" path="res://Assets/ShopiconFuel.png" id="14_bbimk"]
[ext_resource type="Texture2D" uid="uid://du1j1ip5ri6lh" path="res://Assets/ShopiconHealth.png" id="15_m0h3t"]
[ext_resource type="Texture2D" uid="uid://bgkkxulgosqpc" path="res://Assets/ShopiconRange.png" id="16_i4o1l"]
[ext_resource type="Texture2D" uid="uid://cmytxdhavk5rv" path="res://Assets/ShopiconRefuel.png" id="17_j2n6q"]
[ext_resource type="Texture2D" uid="uid://b80vamks4ousr" path="res://Assets/ShopiconRepair.png" id="18_c6x0f"]
[ext_resource type="Texture2D" uid="uid://b5mt30blfjb6p" path="res://Assets/ShopiconScanner.png" id="19_jp1hh"]
[ext_resource type="Texture2D" uid="uid://d0bjexpaflu7w" path="res://Assets/ShopiconShield.png" id="20_qs4pp"]
[ext_resource type="Texture2D" uid="uid://cjrsyh82jumk" path="res://Assets/ShopiconSpeed.png" id="21_iyprq"]
[ext_resource type="Texture2D" uid="uid://cfrmrg7c3n3gw" path="res://Assets/ShopiconTNT.png" id="22_f4lon"]
[ext_resource type="FontFile" uid="uid://7m7b0fytxky" path="res://Assets/Font/Audiowide/Audiowide-Regular.ttf" id="23_76lrf"]
[ext_resource type="PackedScene" uid="uid://bx16abjhtxddb" path="res://Player/shop_hud.tscn" id="8_00tjw"]
[ext_resource type="PackedScene" uid="uid://dso056m18q1im" path="res://Player/player_ui.tscn" id="9_x3vf3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i3pqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_od3ui")
}, {
"duration": 1.0,
"texture": ExtResource("3_00tjw")
}],
"loop": true,
"name": &"Drill 1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_x3vf3")
}, {
"duration": 1.0,
"texture": ExtResource("5_apopc")
}],
"loop": true,
"name": &"Drill 2",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_5htga")
}, {
"duration": 1.0,
"texture": ExtResource("7_p5o4e")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_od3ui"]
radius = 45.0
height = 170.0

[sub_resource type="CircleShape2D" id="CircleShape2D_00tjw"]
radius = 42.19

[sub_resource type="Theme" id="Theme_76lrf"]

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_onrkg")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_i3pqv")
animation = &"Drill 2"
autoplay = "Idle"
frame_progress = 0.201101

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_od3ui")

[node name="PlayerTigArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTigArea"]
shape = SubResource("CircleShape2D_00tjw")

[node name="MainCam" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="ShopHud" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_btcbx")

[node name="Layout" type="Control" parent="Canvas/ShopHud"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HudBackground" type="Sprite2D" parent="Canvas/ShopHud/Layout"]
show_behind_parent = true
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("9_x3vf3")
centered = false

[node name="ItemIcons" type="Control" parent="Canvas/ShopHud/Layout"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ShopiconAutominer" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(871, 156)
scale = Vector2(0.65, 0.65)
texture = ExtResource("10_sm0op")

[node name="ShopiconCargo" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(865, 359)
scale = Vector2(0.65, 0.65)
texture = ExtResource("11_76lrf")

[node name="ShopiconDrill" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(648, 358)
scale = Vector2(0.65, 0.65)
texture = ExtResource("12_efx54")

[node name="ShopiconFlag" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(528, 564)
scale = Vector2(0.65, 0.65)
texture = ExtResource("13_755ss")

[node name="ShopiconFuel" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(752, 364)
scale = Vector2(0.65, 0.65)
texture = ExtResource("14_bbimk")

[node name="ShopiconHealth" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(425, 363)
scale = Vector2(0.65, 0.65)
texture = ExtResource("15_m0h3t")

[node name="ShopiconRange" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(647, 564)
rotation = 1.6386
scale = Vector2(0.65, 0.65)
texture = ExtResource("16_i4o1l")

[node name="ShopiconRefuel" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(534, 162)
scale = Vector2(0.65, 0.65)
texture = ExtResource("17_j2n6q")

[node name="ShopiconRepair" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(423, 161)
scale = Vector2(0.65, 0.65)
texture = ExtResource("18_c6x0f")

[node name="ShopiconScanner" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(426, 559)
scale = Vector2(0.65, 0.65)
texture = ExtResource("19_jp1hh")

[node name="ShopiconShield" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(649, 166)
scale = Vector2(0.65, 0.65)
texture = ExtResource("20_qs4pp")

[node name="ShopiconSpeed" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(539, 366)
scale = Vector2(0.65, 0.65)
texture = ExtResource("21_iyprq")

[node name="ShopiconTnt" type="Sprite2D" parent="Canvas/ShopHud/Layout/ItemIcons"]
position = Vector2(760, 164)
scale = Vector2(0.65, 0.65)
texture = ExtResource("22_f4lon")

[node name="InfoPanel" type="Control" parent="Canvas/ShopHud/Layout"]
anchors_preset = 0
offset_left = 986.0
offset_top = 219.0
offset_right = 1236.0
offset_bottom = 569.0

[node name="ItemInfo" type="Label" parent="Canvas/ShopHud/Layout/InfoPanel"]
offset_left = 5.0
offset_top = 35.0
offset_right = 230.0
offset_bottom = 285.0
theme = SubResource("Theme_76lrf")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_76lrf")
theme_override_font_sizes/font_size = 23
text = "Info"
autowrap_mode = 2

[node name="ItemName" type="Label" parent="Canvas/ShopHud/Layout/InfoPanel"]
layout_mode = 0
offset_left = 5.0
offset_right = 96.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_76lrf")
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="ItemCost" type="Label" parent="Canvas/ShopHud/Layout/InfoPanel"]
offset_left = 30.0
offset_top = 300.0
offset_right = 230.0
offset_bottom = 339.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("23_76lrf")
theme_override_font_sizes/font_size = 26
text = "0$"
horizontal_alignment = 2

[node name="ShopSelector" type="Control" parent="Canvas/ShopHud"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Utilities" type="Control" parent="Canvas/ShopHud/ShopSelector"]
anchors_preset = 0
offset_left = 350.0
offset_top = 95.0
offset_right = 1250.0
offset_bottom = 295.0
scale = Vector2(0.667, 0.667)

[node name="Refule" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Utilities"]
position = Vector2(25, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Repair" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Utilities"]
position = Vector2(190, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Shield" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Utilities"]
position = Vector2(355, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Bomb" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Utilities"]
position = Vector2(520, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Miner" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Utilities"]
position = Vector2(685, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Upgrades" type="Control" parent="Canvas/ShopHud/ShopSelector"]
anchors_preset = 0
offset_left = 350.0
offset_top = 295.0
offset_right = 1250.0
offset_bottom = 495.0
scale = Vector2(0.667, 0.667)

[node name="Health" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Upgrades"]
position = Vector2(25, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Speed" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Upgrades"]
position = Vector2(190, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Drill" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Upgrades"]
position = Vector2(355, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Tank" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Upgrades"]
position = Vector2(520, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Cargo" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Upgrades"]
position = Vector2(685, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Apilities" type="Control" parent="Canvas/ShopHud/ShopSelector"]
anchors_preset = 0
offset_left = 350.0
offset_top = 495.0
offset_right = 1250.0
offset_bottom = 695.0
scale = Vector2(0.667, 0.667)

[node name="Scaner" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Apilities"]
position = Vector2(25, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Flag" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Apilities"]
position = Vector2(190, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="Range" type="Sprite2D" parent="Canvas/ShopHud/ShopSelector/Apilities"]
position = Vector2(355, 10)
scale = Vector2(0.9, 0.9)
texture = ExtResource("10_x3vf3")
centered = false

[node name="PlayerUI" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("11_apopc")

[node name="Sprite2D" type="Sprite2D" parent="Canvas/PlayerUI"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_00tjw")
centered = false

[node name="ProgressBar" type="ProgressBar" parent="Canvas/PlayerUI"]
self_modulate = Color(0, 0.894118, 0, 1)
layout_mode = 0
offset_left = 25.0
offset_top = 15.0
offset_right = 225.0
offset_bottom = 45.0
theme_override_styles/background = ExtResource("13_gu6f8")
theme_override_styles/fill = ExtResource("13_p5o4e")
max_value = 2.0
step = 1.0
value = 1.0
show_percentage = false

[connection signal="playerStats" from="." to="Canvas/ShopHud" method="_on_player_player_stats"]
[connection signal="playerStats" from="." to="Canvas/PlayerUI" method="_on_player_player_stats"]
[connection signal="area_entered" from="PlayerTigArea" to="." method="_on_player_tig_area_area_entered"]
[connection signal="area_exited" from="PlayerTigArea" to="." method="_on_player_tig_area_area_exited"]
[connection signal="buyShopSelection" from="Canvas/ShopHud" to="." method="_on_menu_hud_buy_shop_selection"]
